--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: neofetch-desktop
-base: core22
-version: '0.1'
+base: core24
+version: git
 summary: Neofetch Desktop
 description: |
   Shows Linux System Information with Distribution Logo
@@ -8,16 +8,21 @@ icon: data/neofetch-desktop.png
 grade: stable
 confinement: strict
 
+layout:
+  /usr/lib/$CRAFT_ARCH_TRIPLET_BUILD_FOR/libproxy/libpxbackend-1.0.so:
+    symlink: $SNAP/gnome-platform/usr/lib/$CRAFT_ARCH_TRIPLET_BUILD_FOR/libproxy/libpxbackend-1.0.so
+
 parts:
   neofetch:
     plugin: make
     source: https://github.com/hykilpikonna/hyfetch.git
+    source-tag: '1.4.10'
     stage-packages:
       - bind9-dnsutils
       - pciutils
     prime:
       - -usr/lib/*/libisccc*.so
-        
+
   vte:
     source: https://gitlab.gnome.org/GNOME/vte.git
     source-tag: '0.70.5'
@@ -59,10 +64,10 @@ parts:
   cleanup:
     after: [neofetch, neofetch-desktop]
     plugin: nil
-    build-snaps: [core22, gtk-common-themes, gnome-42-2204]
+    build-snaps: [core24, gtk-common-themes, gnome-46-2404]
     override-prime: |
       set -eux
-      for snap in "core22" "gtk-common-themes" "gnome-42-2204"; do
+      for snap in "core24" "gtk-common-themes" "gnome-46-2404"; do
         cd "/snap/$snap/current" && find . -type f,l -name *.so.* -exec rm -f "$CRAFT_PRIME/{}" \;
       done
 
